[gd_scene load_steps=2 format=2]

[ext_resource path="res://Cena/script/tela_inicial.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 68.0
margin_top = 28.0
margin_right = 263.0
margin_bottom = 117.0
text = "Lista Preenchida"

[node name="dado1" type="LineEdit" parent="."]
margin_left = 392.0
margin_top = 102.0
margin_right = 605.0
margin_bottom = 195.0

[node name="dado2" type="LineEdit" parent="."]
margin_left = 693.0
margin_top = 93.0
margin_right = 893.0
margin_bottom = 183.0

[node name="dado3" type="LineEdit" parent="."]
visible = false
margin_left = 789.0
margin_top = 93.0
margin_right = 963.0
margin_bottom = 172.0

[node name="Label" type="Label" parent="."]
margin_left = 388.0
margin_top = 10.0
margin_right = 599.0
margin_bottom = 92.0
text = "Coloque sua lista aqui em 
separação de espaços para
indicar cada item.
Depois clique em LIsta Usuario
para gerar sua lista corretamente"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 689.0
margin_top = 16.0
margin_right = 899.0
margin_bottom = 86.0
text = "Digite um valor e depois 
aperte em resultado para
ver o que digitou"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = 768.0
margin_top = 13.0
margin_right = 978.0
margin_bottom = 83.0
text = "Dado 3"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 192.0
margin_top = 304.0
margin_right = 897.0
margin_bottom = 596.0

[node name="reposta" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = 3.0
margin_right = 703.0
margin_bottom = 292.0

[node name="Button2" type="Button" parent="."]
margin_left = 412.0
margin_top = 206.0
margin_right = 580.0
margin_bottom = 272.0
text = "Lista Usuario"

[node name="Button3" type="Button" parent="."]
margin_left = 74.0
margin_top = 148.0
margin_right = 267.0
margin_bottom = 225.0
text = "Retorna texto na tela"

[node name="Button4" type="Button" parent="."]
margin_left = 719.0
margin_top = 214.0
margin_right = 862.0
margin_bottom = 269.0
text = "resultado"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
